[gd_scene load_steps=3 format=3 uid="uid://chmpfmedpfcvu"]

[ext_resource type="PackedScene" uid="uid://qxqxeks3gsee" path="res://my_graph_node/MyGraphNode.tscn" id="1_a3k8v"]
[ext_resource type="Script" path="res://my_graph_node/dialogue_trigger_node/DialogueTriggerNode.gd" id="2_d0vve"]

[node name="DialogueTriggerNode" instance=ExtResource("1_a3k8v")]
offset_right = 420.0
offset_bottom = 96.0
title = "Dialogue Trigger"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("2_d0vve")

[node name="TriggerContainer" type="HBoxContainer" parent="." index="0"]
layout_mode = 2

[node name="TriggerType" type="OptionButton" parent="TriggerContainer" index="0"]
custom_minimum_size = Vector2(174, 0)
layout_mode = 2
item_count = 6
selected = 0
popup/item_0/text = "Default"
popup/item_0/id = 0
popup/item_1/text = "Event Saved"
popup/item_1/id = 1
popup/item_2/text = "Shown Information"
popup/item_2/id = 2
popup/item_3/text = "Shown Item"
popup/item_3/id = 3
popup/item_4/text = "Information Fallback"
popup/item_4/id = 4
popup/item_5/text = "Item Fallback"
popup/item_5/id = 5

[node name="TriggerArgument" type="LineEdit" parent="TriggerContainer" index="1"]
custom_minimum_size = Vector2(168, 0)
layout_mode = 2
placeholder_text = "Argument"
